fixed z-index of all non-static position items

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
   padding: 10px;
   background-color: #000000;
   color: white;
+  z-index: 5;
 }
 
 header {
