--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -7,6 +7,7 @@
   box-shadow: 4px 4px 8px rgba(0,0,0,0);
   transition: all .3s;
   position: relative;
+  z-index: 1;
 }
 
 .Product:hover {
